--- a/WS/addressbook-api/src/main/resources/application.properties
+++ b/WS/addressbook-api/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=addressbook-api
+server.port=8888
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbookdb?createDatabaseIfNotExist=true
+spring.jpa.hibernate.ddl-auto=update
